updates to manuscript - correcting invar testing and RQ3

--- a/EF_network_analysis.tex
+++ b/EF_network_analysis.tex
@@ -166,9 +166,7 @@ using Network Analysis}
 
 
 
-\authorsnames[{1,2},{2},{3},{4},{5},{3},{2},{2}]{Fionnuala
-O'Reilly,Jelena Sucevic,Caylee Cook,Justin E. Karr,Philippe
-Rast,Catherine Draper*,Steven Howard*,Gaia Scerif*}
+\authorsnames[{1,2},{2},{3},{4},{5},{3},{2},{2}]{A,B,C,D,E,F*,G*,H*}
 
 
 
@@ -184,7 +182,7 @@ Davis}}
 
 
 
-\leftheader{O'Reilly, Sucevic, Cook, Karr, Rast, Draper*, Howard* and Scerif*}
+\leftheader{A, B, C, D, E, F*, G* and H*}
 
 
 
@@ -192,21 +190,12 @@ Davis}}
 
 \keywords{executive function}
 
-\authornote{\par{\addORCIDlink{Fionnuala
-O'Reilly}{0000-0002-4355-9088}}\par{\addORCIDlink{Jelena
-Sucevic}{0000-0001-5091-5434}}\par{\addORCIDlink{Caylee
-Cook}{0000-0001-9718-8887}}\par{\addORCIDlink{Justin E.
-Karr}{0000-0003-3653-332X}}\par{\addORCIDlink{Philippe
-Rast}{0000-0003-3630-6629}}\par{\addORCIDlink{Catherine
-Draper*}{0000-0002-2885-437X}}\par{\addORCIDlink{Steven
-Howard*}{0000-0002-1258-3210}}\par{\addORCIDlink{Gaia
-Scerif*}{0000-0002-6371-8874}} 
+\authornote{ 
 
 \par{   The author has no conflict of interest to declare. This work was
 supported by X.   }
 \par{Correspondence concerning this article should be addressed
-to Fionnuala
-O'Reilly, Email: \href{mailto:fionnuala.oreilly@psy.ox.ac.uk}{fionnuala.oreilly@psy.ox.ac.uk}}
+to A, Email: \href{mailto:f@psy.ox.ac.uk}{f@psy.ox.ac.uk}}
 }
 
 \makeatletter
@@ -323,31 +312,31 @@ O'Reilly, Email: \href{mailto:fionnuala.oreilly@psy.ox.ac.uk}{fionnuala.oreilly@
 
 \subsection{Research Questions}\label{research-questions}
 
-\textbf{RQ1 (Primary): EF Network Structure Within Cohorts} Within each
-cohort and wave, what is the age-adjusted EF network---defined by
-partial correlations among working memory, inhibition, and cognitive
-flexibility---and what do global strength and expected influence
-indicate about overall connectivity and node centrality?
+\textbf{Research Question 1 (Primary): EF Network Structure Within
+Cohorts}\\
+Within each cohort and wave, what is the age-adjusted EF
+network---defined by partial correlations among working memory,
+inhibition, and cognitive flexibility---and what do global strength and
+expected influence indicate about overall connectivity and node
+centrality?
 
-\textbf{RQ2 (Primary): Developmental Change Within Cohorts} RQ2a: Within
-each cohort, do the EF conditional associations (partial correlations)
-change across adjacent waves (AU: T1→T2→T3; SA: T1→T2), and if so, which
-specific edges strengthen or weaken over time?
+\textbf{Research Question 2 (Primary): Developmental Change Within
+Cohorts}\\
+Within each cohort, do the EF conditional associations (partial
+correlations) change across adjacent waves (AU: T1→T2→T3; SA: T1→T2),
+and if so, which specific edges strengthen or weaken over time?
 
-RQ2b: At the individual level, are gains in one EF component coupled
-with gains in other components (i.e., does change in one domain predict
-change in another), and does this coupling vary by baseline SES?
+\textbf{Research Question 3 (Secondary): Cross-Cohort Comparisons}\\
+At matched waves (T1 and T2), do AU and SA differ in EF conditional
+associations, and do the cohorts show divergent developmental
+trajectories from T1 to T2 (difference-in-differences)?
 
-\textbf{RQ3 (Secondary): Cross-Cohort Comparisons} At matched waves (T1
-and T2), do AU and SA differ in EF conditional associations, and do the
-cohorts show divergent developmental trajectories from T1 to T2
-(difference-in-differences)?
-
-\textbf{RQ4 (Exploratory): Socioeconomic Moderation of Network
-Structure} Within each cohort, does EF network structure differ between
-children from high versus low baseline (T1) household income and home
-learning environments? Specifically, are edges systematically stronger
-or weaker in high-SES groups across waves?
+\textbf{Research Question 4 (Exploratory): Socioeconomic Moderation of
+Network Structure}\\
+Within each cohort, does EF network structure differ between children
+from high versus low baseline (T1) household income and home learning
+environments? Specifically, are edges systematically stronger or weaker
+in high-SES groups across waves?
 
 \clearpage
 
@@ -454,15 +443,13 @@ EI_i = \sum_{j \neq i} r_{ij}
 Unlike older centrality metrics (e.g., betweenness, closeness), expected
 influence is appropriate for networks estimated from partial
 correlations and does not require thresholding edges or converting the
-network to a binary graph.
-
-We chose expected influence over strength (which uses absolute values)
-because it preserves directional information: a node can have high
-expected influence by being positively connected to many nodes, whereas
-strength would treat positive and negative edges equivalently. In EF
-networks where edges are predominantly positive, the two metrics
-converge, but expected influence provides a more nuanced picture if any
-negative edges emerge.
+network to a binary graph. We chose expected influence over strength
+(which uses absolute values) because it preserves directional
+information: a node can have high expected influence by being positively
+connected to many nodes, whereas strength would treat positive and
+negative edges equivalently. In EF networks where edges are
+predominantly positive, the two metrics converge, but expected influence
+provides a more nuanced picture if any negative edges emerge.
 
 \subsubsection{Change and Comparison
 Analyses}\label{change-and-comparison-analyses}
@@ -488,18 +475,6 @@ showed divergent developmental trajectories by computing
 (Δr\textsubscript{T2-T1})\textsubscript{SA}. A meaningful DiD would
 indicate that one cohort changed more than the other over time.
 
-\subsubsection{Individual-Level Change
-Coupling}\label{individual-level-change-coupling}
-
-To test whether developmental changes across EF components were
-coordinated at the individual level (RQ2b), we computed change scores
-for each child (ΔEF = EF\textsubscript{T2} − EF\textsubscript{T1}) and
-regressed change in one component on change in another, controlling for
-baseline performance and age. Significant positive regression
-coefficients would indicate coupled development, where gains in one
-domain predict gains in another. We tested all pairwise relationships
-and examined whether SES moderated coupling strength.
-
 \subsubsection{Moderation Analyses}\label{moderation-analyses}
 
 To test whether socioeconomic factors moderate network structure (RQ4),
@@ -514,35 +489,40 @@ continuous covariate in a single model, as it allows network structure
 to differ nonlinearly across SES groups and does not assume constant
 effects across the SES distribution.
 
-\subsubsection{Robustness check: Measurement
-Invariance}\label{robustness-check-measurement-invariance}
+\subsubsection{Measurement Invariance}\label{measurement-invariance}
 
-We tested measurement invariance across cohorts using confirmatory
-factor analysis (CFA) in the lavaan R package
-(\citeproc{ref-rosseel2012lavaan}{Rosseel, 2012}). We fit a
-single-factor model with the three EF components as indicators and
-tested three levels of invariance:
+We tested measurement invariance using multi-group confirmatory factor
+analysis (CFA) in the lavaan R package
+(\citeproc{ref-rosseel2012lavaan}{Rosseel, 2012}). Because cognitive
+flexibility exhibited pronounced floor effects in Australian children
+(see Figure~\ref{fig-ef-boxplots-by-wave}) at T1 (32.5\% scoring zero),
+we treated all three EF indicators as ordinal variables, segmenting them
+into tertiles (Low/Medium/High) based on pooled distributions. We fit a
+single-factor ordinal CFA model across four groups simultaneously
+(AU\_T1, AU\_T2, SA\_T1, SA\_T2), testing invariance across both cohorts
+and developmental timepoints using robust weighted least squares
+estimation (WLSMV). We tested three levels of invariance:
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
 \tightlist
 \item
   \textbf{Configural invariance}: The same factor structure (three
-  indicators loading on one factor) holds in both cohorts
+  indicators loading on one factor) holds across all groups
 \item
-  \textbf{Metric invariance}: Factor loadings are equal across cohorts
-  (components relate to the latent construct equivalently)
+  \textbf{Metric invariance}: Factor loadings are equal across groups
+  (components relate to the latent EF construct equivalently)
 \item
-  \textbf{Scalar invariance}: Intercepts are equal across cohorts
-  (groups have the same baseline levels)
+  \textbf{Scalar invariance}: Thresholds (category boundaries for
+  ordinal indicators) are equal across groups
 \end{enumerate}
 
 We evaluated invariance using chi-square difference tests (Δχ²) and
-changes in fit indices (ΔCFI, ΔRMSEA), with ΔCFI \textless{} 0.01
-supporting invariance (\citeproc{ref-cheung2002evaluating}{Cheung \&
-Rensvold, 2002}). Metric invariance is a prerequisite for comparing
-relationships between variables across groups, while scalar invariance
-is required for comparing mean levels.
+changes in fit indices (ΔCFI), with ΔCFI \textless{} 0.01 supporting
+invariance (\citeproc{ref-cheung2002evaluating}{Cheung \& Rensvold,
+2002}). Metric invariance is a prerequisite for comparing network
+structures (relationships between EF components) across groups, while
+scalar invariance is required for comparing mean levels.
 
 \subsubsection{Software}\label{software}
 
@@ -555,11 +535,74 @@ Analysis code is available at {[}include github url{]}.
 
 \section{Results}\label{results}
 
-\textbf{RQ1 (Primary): EF Network Structure Within Cohorts}: Within each
-cohort and wave, what is the age-adjusted EF network---defined by
-partial correlations among working memory, inhibition, and cognitive
-flexibility---and what do global strength and expected influence
-indicate about overall connectivity and node centrality?
+\subsubsection{Measurement Invariance}\label{measurement-invariance-1}
+
+To evaluate cross-cohort comparability of EF indicators, we conducted
+multi-group confirmatory factor analyses (CFA) across four cohort×wave
+groups (AU\_T1, AU\_T2, SA\_T1, SA\_T2), thereby testing invariance
+simultaneously across countries and developmental timepoints. Because
+cognitive flexibility exhibited pronounced floor effects in Australian
+children at T1 (32.5\% scoring zero), all three EF indicators were
+treated as ordinal variables using robust weighted least squares
+estimation (WLSMV). Indicators were segmented into tertiles based on
+pooled distributions to ensure adequate category representation.
+
+In ordinal CFA, each observed categorical indicator reflects an
+underlying continuous latent response variable partitioned by
+thresholds. Factor loadings capture the strength of association between
+the latent EF construct and each indicator, while thresholds capture
+distributional placement of categories. This allows floor effect
+severity to be represented through threshold parameters without
+distorting factor loadings.
+
+We estimated a one-factor model in a sequence of increasingly
+constrained models. Configural invariance was supported. Constraining
+factor loadings equal across groups (metric invariance) did not
+significantly reduce fit (Δχ²(6) = 2.62, \emph{p} = 0.854; ΔCFI = 0),
+indicating comparable strength of association between the EF factor and
+its indicators. However, constraining thresholds (scalar invariance)
+significantly worsened fit (Δχ²(6) = 35.29, \emph{p} \textless{} .001;
+ΔCFI = -0.154), with CFI declining from 1 to 0.846, indicating
+systematic threshold differences across groups. Metric invariance
+supports comparison of network structures (relationships between EF
+components) across cohorts, though absolute performance levels cannot be
+compared (see Table~\ref{tbl-invariance}) .
+
+\begin{table}
+
+{\caption{{Measurement Invariance Testing: Fit Indices and Model
+Comparisons}{\label{tbl-invariance}}}
+\vspace{-20pt}}
+
+\fontsize{12.0pt}{14.0pt}\selectfont
+\begin{tabular*}{\linewidth}{@{\extracolsep{\fill}}lrrrrrrrrl}
+\toprule
+Model\textsuperscript{\textit{1}} & CFI & TLI & RMSEA & SRMR & Δχ² & Δdf & p & ΔCFI\textsuperscript{\textit{2}} & Decision \\ 
+\midrule\addlinespace[2.5pt]
+Configural & 1.000 & 1.000 & 0.000 & 0.000 & — & — & — & — & — \\ 
+{\cellcolor[HTML]{E8F5E9}{Metric}} & {\cellcolor[HTML]{E8F5E9}{1.000}} & {\cellcolor[HTML]{E8F5E9}{1.054}} & {\cellcolor[HTML]{E8F5E9}{0.000}} & {\cellcolor[HTML]{E8F5E9}{0.023}} & {\cellcolor[HTML]{E8F5E9}{2.62}} & {\cellcolor[HTML]{E8F5E9}{6}} & {\cellcolor[HTML]{E8F5E9}{0.854}} & {\cellcolor[HTML]{E8F5E9}{0.000}} & {\cellcolor[HTML]{E8F5E9}{Supported}} \\ 
+{\cellcolor[HTML]{FFEBEE}{Scalar}} & {\cellcolor[HTML]{FFEBEE}{0.846}} & {\cellcolor[HTML]{FFEBEE}{0.846}} & {\cellcolor[HTML]{FFEBEE}{0.094}} & {\cellcolor[HTML]{FFEBEE}{0.037}} & {\cellcolor[HTML]{FFEBEE}{35.29}} & {\cellcolor[HTML]{FFEBEE}{6}} & {\cellcolor[HTML]{FFEBEE}{0.000}} & {\cellcolor[HTML]{FFEBEE}{-0.154}} & {\cellcolor[HTML]{FFEBEE}{Not supported}} \\ 
+\bottomrule
+\end{tabular*}
+\begin{minipage}{\linewidth}
+\vspace{.05em}
+\textsuperscript{\textit{1}} Ordinal CFA with WLSMV estimation; four groups: AU\_T1, AU\_T2, SA\_T1, SA\_T2\\
+\textsuperscript{\textit{2}} ΔCFI < 0.01 indicates invariance is supported (Cheung \& Rensvold, 2002)\\
+\end{minipage}
+
+\end{table}
+
+\clearpage
+
+\subsubsection{Research Question 1 (Primary): EF Network Structure
+Within
+Cohorts}\label{research-question-1-primary-ef-network-structure-within-cohorts}
+
+Within each cohort and wave, what is the age-adjusted EF
+network---defined by partial correlations among working memory,
+inhibition, and cognitive flexibility---and what do global strength and
+expected influence indicate about overall connectivity and node
+centrality?
 
 \subsubsection{Edges}\label{edges}
 
@@ -756,10 +799,21 @@ each panel.}
 
 \clearpage
 
-\textbf{RQ2a (Primary): Developmental Change Within Cohorts}: Within
-each cohort, do the EF conditional associations (partial correlations)
-change across adjacent waves (AU: T1→T2→T3; SA: T1→T2), and if so, which
-specific edges strengthen or weaken over time?
+\subsubsection{Research Question 2 (Primary): Developmental Change
+Within
+Cohorts}\label{research-question-2-primary-developmental-change-within-cohorts}
+
+Within each cohort, do the EF conditional associations (partial
+correlations) change across adjacent waves (AU: T1→T2→T3; SA: T1→T2),
+and if so, which specific edges strengthen or weaken over time?
+
+Given metric invariance, we compared network structures across adjacent
+waves within each cohort. For each wave transition, we computed
+posterior distributions of change in edge weights (Δr = later wave −
+earlier wave), global strength (Δ), and expected influence (Δ). We
+evaluated whether changes exceeded a region of practical equivalence
+(ROPE; \textbar Δr\textbar{} \textgreater{} 0.10) to distinguish
+meaningful developmental change from negligible fluctuation.
 
 We found little evidence for meaningful change in EF network summaries
 across adjacent waves within either cohort (see
@@ -821,166 +875,104 @@ Working memory & SA & T2 − T1 & 0.02 [-0.23, 0.27] & 0.44 \\
 
 \clearpage
 
-\textbf{RQ2b: Individual Differences in Developmental Change}: At the
-individual level, are gains in one EF component coupled with gains in
-other components (i.e., does change in one domain predict change in
-another), and does this coupling vary by baseline SES?
+\subsubsection{Research Question 3 (Secondary): Cross-Cohort
+Comparisons}\label{research-question-3-secondary-cross-cohort-comparisons}
 
-While group-level networks showed stability (RQ2a), we tested whether
-individual differences in EF developmental change showed coupling---that
-is, whether gains in one EF domain predicted gains in another. For each
-child with data at both T1 and T2 (Australia: n = 217; South Africa: n =
-189), we computed change scores (ΔEF = T2 − T1) and tested whether
-change in one component predicted change in another, controlling for
-baseline performance and age (see Table~\ref{tbl-rq2b-change-coupling}).
+At matched waves (T1 and T2), do AU and SA differ in EF conditional
+associations, and do the cohorts show divergent developmental
+trajectories from T1 to T2 (difference-in-differences)?
 
-We found little evidence for systematic coupling of developmental
-change. In Australia, all relationships between component changes were
-near zero (\textbar β\textbar{} ≤ 0.11, all \emph{p} \textgreater{}
-.10). Working memory gains did not reliably predict inhibition gains (β
-= -0.00 {[}-0.03, 0.02{]}, \emph{p} = 0.815) nor cognitive flexibility
-gains (β = -0.01 {[}-0.53, 0.50{]}, \emph{p} = 0.962). Similarly,
-inhibition and cognitive flexibility changes did not predict gains in
-other domains.
+A substantial floor effect was observed in Australian T1 cognitive
+flexibility (32.5\% scoring zero), raising potential concerns for
+cross-cohort network comparisons. Floor effects can induce artificial
+correlations through range restriction and may bias partial correlation
+estimates. To address this, we (1) Report cross-cohort comparisons using
+the full sample (primary analysis), and (2) Conduct sensitivity analyses
+excluding children who scored zero on cognitive flexibility at each
+wave. If results converge across analyses, this would suggest floor
+effects do not meaningfully distort cross-cohort comparisons. Divergence
+would indicate that apparent cohort differences partly reflect
+measurement artefacts.
 
-In South Africa, the pattern was similar, with one marginal exception:
-working memory gains showed a tentative positive association with
-cognitive flexibility gains (β = 0.43 {[}-0.01, 0.87{]}, \emph{p} =
-0.060). All other relationships remained near zero (see
-Figure~\ref{fig-rq2b-scatter}), with substantial individual variability
-in change patterns but no systematic coupling across domains.
+\textbf{Main Analysis (Full Sample).}: At T1, posterior medians
+suggested modest AU--SA differences in several edges; however, all 95\%
+credible intervals overlapped zero. At T2, cohort differences were
+smaller and predominantly positive, but again uncertain. In the
+difference-in-differences analysis, most edges were centered near zero.
+The largest deviation was observed for CogFlex--Inhibition (median =
+0.2; 95\% CrI {[}-0.08, 0.47{]}; P(\textbar Δr\textbar\textgreater0.10)
+= 0.78), though its credible interval still included zero, indicating
+substantial uncertainty. Results were substantively unchanged when
+differences were summarized on the Fisher z (atanh) scale
+(Table~\ref{tbl-rq3-gt-edges-dual}).
 
-These findings indicate that EF components develop independently at the
-individual level during this developmental window, with gains in one
-domain not systematically predicting gains in others. This lack of
-coupling validates the group-level stability finding (RQ2a): the
-stability we observed reflects genuine architectural stability rather
-than an artifact of averaging heterogeneous individual trajectories. The
-independence of developmental change supports models of EF as a set of
-related but dissociable capacities that mature through
-component-specific rather than domain-general processes during early
-childhood.
+\textbf{Sensitivity Analysis (Excluding Cognitive Flexibility Floor
+Performers).}: Given the pronounced floor effect in Australian T1
+cognitive flexibility (75/232 excluded {[}32.3\%{]}; AU T2: 42/217
+{[}19.4\%{]}; SA T1: 0/217 {[}0\%{]}; SA T2: 7/189 {[}3.7\%{]}), we
+refitted networks after wave-specific exclusion of children scoring zero
+on cognitive flexibility. Estimates were highly similar in direction and
+magnitude to the main analysis (see
+Table~\ref{tbl-rq3-sensitivity-comparison}), with credible intervals
+widening due to reduced sample size. Patterns at T2 and in the
+difference-in-differences analysis were nearly identical.Together, these
+results indicate that cross-cohort differences in EF network structure
+are small and uncertain.
 
 \begin{table}
 
-{\caption{{Coupling of developmental change across EF domains. Each row
-shows whether change in one EF component (predictor) predicts change in
-another component (outcome), controlling for baseline performance and
-age. Standardized coefficients with 95\%
-CIs.}{\label{tbl-rq2b-change-coupling}}}
+{\caption{{Sensitivity analysis: Cross-cohort comparisons with vs
+without floor performers. Main analysis includes all children;
+sensitivity analysis uses wave-specific exclusion of children who scored
+0 on any EF measure at that
+wave.}{\label{tbl-rq3-sensitivity-comparison}}}
 \vspace{-20pt}}
 
 \caption*{
-{\fontsize{1}{1}\selectfont  \textbackslash{}vspace\{10pt\}\fontsize{8}{10}\selectfont }
+{\fontsize{1}{1}\selectfont  \textbackslash{}vspace\{10pt\}\fontsize{8}{9}\selectfont }
 } 
-\fontsize{8.0pt}{10.0pt}\selectfont
-\begin{tabular*}{\linewidth}{@{\extracolsep{\fill}}llcc}
+\fontsize{8.0pt}{9.0pt}\selectfont
+\begin{tabular*}{\linewidth}{@{\extracolsep{\fill}}l|cccc}
 \toprule
-Predictor & Outcome & Australia\textsuperscript{\textit{1}} & South Africa \\ 
+ & \multicolumn{2}{c}{Main Analysis} & \multicolumn{2}{c}{Sensitivity (No Floor)\textsuperscript{\textit{1}}} \\ 
+\cmidrule(lr){2-3} \cmidrule(lr){4-5}
+Edge & Δr [95\% CrI] & P(|Δr|>0.10) & Δr [95\% CrI] & P(|Δr|>0.10) \\ 
 \midrule\addlinespace[2.5pt]
-ΔInhibition & ΔCogFlex & 0.03 [-2.62, 2.68] & -0.52 [-2.30, 1.25] \\ 
-ΔInhibition & ΔWorking Memory & 0.11 [-0.48, 0.70] & -0.35 [-0.83, 0.13] \\ 
-ΔCogFlex & ΔInhibition & 0.00 [-0.00, 0.01] & 0.00 [-0.01, 0.01] \\ 
-ΔCogFlex & ΔWorking Memory & 0.00 [-0.02, 0.03] & 0.02 [-0.01, 0.05] \\ 
-ΔWorking Memory & ΔInhibition & -0.00 [-0.03, 0.02] & 0.00 [-0.03, 0.03] \\ 
-ΔWorking Memory & ΔCogFlex & -0.01 [-0.53, 0.50] & 0.43 [-0.01, 0.87]† \\ 
+\multicolumn{5}{l}{Cohort difference (AU − SA) at T1} \\[2.5pt] 
+\midrule\addlinespace[2.5pt]
+ef\_cogflex - ef\_inhibition & -0.15 [-0.33, 0.03] & 0.72 & -0.02 [-0.22, 0.18] & 0.33 \\ 
+ef\_cogflex - ef\_workingmem & 0.13 [-0.06, 0.31] & 0.62 & 0.13 [-0.08, 0.32] & 0.63 \\ 
+ef\_inhibition - ef\_workingmem & 0.11 [-0.08, 0.29] & 0.55 & 0.09 [-0.11, 0.29] & 0.47 \\ 
+\midrule\addlinespace[2.5pt]
+\multicolumn{5}{l}{Cohort difference (AU − SA) at T2} \\[2.5pt] 
+\midrule\addlinespace[2.5pt]
+ef\_cogflex - ef\_inhibition & 0.04 [-0.15, 0.23] & 0.36 & 0.18 [-0.02, 0.38] & 0.78 \\ 
+ef\_cogflex - ef\_workingmem & 0.08 [-0.11, 0.27] & 0.44 & 0.02 [-0.19, 0.23] & 0.36 \\ 
+ef\_inhibition - ef\_workingmem & 0.13 [-0.06, 0.32] & 0.63 & 0.10 [-0.10, 0.30] & 0.53 \\ 
+\midrule\addlinespace[2.5pt]
+\multicolumn{5}{l}{Difference-in-differences (ΔAU − ΔSA)} \\[2.5pt] 
+\midrule\addlinespace[2.5pt]
+ef\_cogflex — ef\_workingmem & -0.05 [-0.31, 0.22] & 0.49 & -0.11 [-0.39, 0.20] & 0.61 \\ 
+ef\_inhibition — ef\_cogflex & 0.20 [-0.08, 0.47] & 0.78 & 0.21 [-0.08, 0.48] & 0.77 \\ 
+ef\_inhibition — ef\_workingmem & 0.03 [-0.24, 0.29] & 0.47 & 0.01 [-0.27, 0.30] & 0.47 \\ 
 \bottomrule
 \end{tabular*}
 \begin{minipage}{\linewidth}
 \vspace{.05em}
-\textsuperscript{\textit{1}} † p<.10, * p<.05, ** p<.01, *** p<.001. Models control for baseline outcome and age.\\
+\textsuperscript{\textit{1}} Main analysis: all children. Sensitivity: wave-specific exclusion of children who scored 0 on Cognitive Flexibility at that wave (AU T1: 75/232 excluded [32.3\%]; AU T2: 42/217 excluded [19.4\%]; SA T1: 0/217 excluded [0.0\%]; SA T2: 7/189 excluded [3.7\%]).\\
 \end{minipage}
 
 \end{table}
 
-\begin{figure}
-
-\caption{\label{fig-rq2b-scatter}Individual-level coupling of
-developmental change. Points show individual children; lines show
-regression slopes. Strong positive slopes indicate that gains in one
-domain predict gains in another (coupled development).}
-
-\centering{
-
-\pandocbounded{\includegraphics[keepaspectratio]{EF_network_analysis_files/figure-pdf/fig-rq2b-scatter-1.png}}
-
-}
-
-\end{figure}%
-
 \clearpage
 
-\textbf{RQ3 (Secondary): Cross-Cohort Comparisons} At matched waves (T1
-and T2), do AU and SA differ in EF conditional associations, and do the
-cohorts show divergent developmental trajectories from T1 to T2
-(difference-in-differences)?
+\subsubsection{RQ4 (Exploratory): Socioeconomic Moderation of Network
+Structure}\label{rq4-exploratory-socioeconomic-moderation-of-network-structure}
 
-At T1, posterior medians suggested a more negative CogFlex--Inhibition
-difference (AU−SA) and more positive working-memory edges
-(AU\textgreater SA), but uncertainty remains because the 95\% credible
-intervals for all between-cohort contrasts cross 0 ---i.e., the
-posterior still assigns non-trivial probability to both
-AU\textgreater SA and SA\textgreater AU. ROPE probabilities were
-nonetheless moderate (P(\textbar Δr\textbar\textgreater0.1)=0.53--0.72),
-reflecting that the posterior can place substantial mass beyond ±0.1
-while still spanning 0, so magnitude may be meaningful even when
-direction is not pinned down. At T2, cohort differences were smaller and
-mostly positive, but again CrIs overlapped 0. For DiD, two edges showed
-little evidence of cohort-divergent change (posteriors centered near 0),
-while CogFlex--Inhibition was most suggestive (median ≈0.20;
-P(\textbar DiD\textbar\textgreater0.1)=0.78) yet still crossed 0.
-Fisher-z results closely matched Δr, indicating the pattern is not an
-artifact of the bounded correlation scale.
-
-\begin{table}
-
-{\caption{{Between-cohort differences (edges only) at matched waves (AU
-− SA at T1/T2) and difference-in-differences for change from T1 to T2
-(ΔAU − ΔSA). Columns show posterior median {[}95\% CrI{]} on the raw
-partial-correlation scale (Δr) and Fisher-z scale (Δz = atanh(r)). ROPE
-probabilities are computed on Δr:
-\(P(|\Delta r| > 0.10)\).}{\label{tbl-rq3-gt-edges-dual}}}
-\vspace{-20pt}}
-
-\caption*{
-{\fontsize{1}{1}\selectfont  \textbackslash{}vspace\{10pt\}\fontsize{8}{10}\selectfont }
-} 
-\fontsize{8.0pt}{10.0pt}\selectfont
-\begin{tabular*}{\linewidth}{@{\extracolsep{\fill}}l|ccc}
-\toprule
- & \multicolumn{2}{c}{Δr (raw partial correlation)} & \multicolumn{1}{c}{Δz (Fisher atanh scale)} \\ 
-\cmidrule(lr){2-3} \cmidrule(lr){4-4}
-Edge & Median [95\% CrI] & P(|Δr|>0.1) & Median [95\% CrI] \\ 
-\midrule\addlinespace[2.5pt]
-\multicolumn{4}{l}{Cohort difference (AU − SA) at T1} \\[2.5pt] 
-\midrule\addlinespace[2.5pt]
-ef\_cogflex - ef\_inhibition & -0.15 [-0.33, 0.03] & 0.72 & -0.16 [-0.34, 0.03] \\ 
-ef\_cogflex - ef\_workingmem & 0.13 [-0.06, 0.31] & 0.62 & 0.13 [-0.06, 0.32] \\ 
-ef\_inhibition - ef\_workingmem & 0.11 [-0.08, 0.29] & 0.55 & 0.11 [-0.08, 0.31] \\ 
-\midrule\addlinespace[2.5pt]
-\multicolumn{4}{l}{Cohort difference (AU − SA) at T2} \\[2.5pt] 
-\midrule\addlinespace[2.5pt]
-ef\_cogflex - ef\_inhibition & 0.04 [-0.15, 0.23] & 0.36 & 0.04 [-0.16, 0.24] \\ 
-ef\_cogflex - ef\_workingmem & 0.08 [-0.11, 0.27] & 0.44 & 0.08 [-0.12, 0.28] \\ 
-ef\_inhibition - ef\_workingmem & 0.13 [-0.06, 0.32] & 0.63 & 0.14 [-0.06, 0.34] \\ 
-\midrule\addlinespace[2.5pt]
-\multicolumn{4}{l}{Difference-in-differences (ΔAU − ΔSA)} \\[2.5pt] 
-\midrule\addlinespace[2.5pt]
-ef\_cogflex — ef\_workingmem & -0.05 [-0.31, 0.22] & 0.49 & -0.05 [-0.33, 0.22] \\ 
-ef\_inhibition — ef\_cogflex & 0.20 [-0.08, 0.47] & 0.78 & 0.20 [-0.08, 0.48] \\ 
-ef\_inhibition — ef\_workingmem & 0.03 [-0.24, 0.29] & 0.47 & 0.03 [-0.25, 0.31] \\ 
-\bottomrule
-\end{tabular*}
-
-\end{table}
-
-\clearpage
-
-\textbf{RQ4 (Exploratory): Socioeconomic Moderation of Network
-Structure}: Within each cohort, does EF network structure differ between
-children from high versus low baseline (T1) household income and home
-learning environments? Specifically, are edges systematically stronger
-or weaker in high-SES groups across waves?
+Within each cohort, does EF network structure differ between children
+from high versus low baseline (T1) household income and home learning
+environments? Specifically, are edges systematically stronger or weaker
+in high-SES groups across waves?
 
 Exploratory moderation analyses revealed little consistent evidence that
 baseline income or HLE systematically altered EF network structure
@@ -1051,83 +1043,6 @@ ef\_inhibition — ef\_workingmem & SA & T2 & 73 & 110 & 0.04 [-0.25, 0.34] & 0.
 \end{table}
 
 \clearpage
-
-\subsection{Robustness Check: Measurement
-Invariance}\label{robustness-check-measurement-invariance-1}
-
-To test whether EF network differences reflected genuine structural
-differences versus measurement artifacts, we conducted measurement
-invariance tests across cohorts at T1 and T2. At T1, metric invariance
-was not supported (Δχ² = 10.85, Δ\emph{df} = 2, \emph{p} =
-\textless.01), with model fit deteriorating from CFI = 1.000 to 0.780.
-This indicates that the factor loadings---the relationships between EF
-components and the underlying construct---differed significantly across
-cohorts at baseline, validating our RQ1 finding that network
-architectures are context-dependent. However, by T2, metric invariance
-was achieved (Δχ² = 1.03, \emph{p} = 0.596; CFI remained at 1.000),
-indicating that structural relationships had converged despite
-differences in baseline performance levels (scalar invariance: \emph{p}
-= \textless.001).
-
-\begin{table}
-
-{\caption{{Measurement invariance tests across cohorts. Models test
-whether the three-component EF structure is equivalent between Australia
-and South Africa.}{\label{tbl-measurement-invariance}}}
-\vspace{-20pt}}
-
-\caption*{
-{\fontsize{1}{1}\selectfont  \textbackslash{}vspace\{10pt\}\fontsize{8}{10}\selectfont }
-} 
-\fontsize{8.0pt}{10.0pt}\selectfont
-\begin{tabular*}{\linewidth}{@{\extracolsep{\fill}}llccccccc}
-\toprule
-{\bfseries Wave} & {\bfseries Model} & {\bfseries χ²} & {\bfseries \emph{df}} & {\bfseries \emph{p}} & {\bfseries CFI}\textsuperscript{\textit{1}} & {\bfseries TLI} & {\bfseries RMSEA [90\% CI]} & {\bfseries SRMR} \\ 
-\midrule\addlinespace[2.5pt]
-T1 & Configural & 0.00 & 0 & NA & 1.000 & 1.000 & NA [NA, NA] & 0.000 \\ 
-T1 & Metric & 20.61 & 2 & <.001 & 0.780 & 0.339 & 0.204 [0.000, 0.000] & 0.050 \\ 
-T1 & Scalar & 46.93 & 4 & <.001 & 0.492 & 0.237 & 0.219 [0.163, 0.280] & 0.102 \\ 
-T2 & Configural & 0.00 & 0 & NA & 1.000 & 1.000 & NA [NA, NA] & 0.000 \\ 
-T2 & Metric & 1.05 & 2 & 0.592 & 1.000 & 1.040 & 0.000 [0.000, 0.121] & 0.016 \\ 
-T2 & Scalar & 29.68 & 4 & <.001 & 0.644 & 0.466 & 0.178 [0.110, 0.254] & 0.069 \\ 
-\bottomrule
-\end{tabular*}
-\begin{minipage}{\linewidth}
-\vspace{.05em}
-\textsuperscript{\textit{1}} Good fit: CFI/TLI > .95, RMSEA < .06, SRMR < .08. Configural = same structure across groups; Metric = equal factor loadings; Scalar = equal loadings + intercepts.\\
-\end{minipage}
-
-\end{table}
-
-\begin{table}
-
-{\caption{{Model comparison tests for measurement invariance. Δχ² tests
-whether constraining parameters significantly worsens
-fit.}{\label{tbl-measurement-invariance-comparisons}}}
-\vspace{-20pt}}
-
-\caption*{
-{\fontsize{1}{1}\selectfont  \textbackslash{}vspace\{10pt\}\fontsize{8}{10}\selectfont }
-} 
-\fontsize{8.0pt}{10.0pt}\selectfont
-\begin{tabular*}{\linewidth}{@{\extracolsep{\fill}}clcccc}
-\toprule
-Wave & Comparison & Δχ² & Δ\emph{df} & \emph{p}\textsuperscript{\textit{1}} & Invariance \\ 
-\midrule\addlinespace[2.5pt]
-T1 & Configural vs Metric & 10.85 & 2 & <.01 & {\cellcolor[HTML]{F08080}{Rejected}} \\ 
-T1 & Metric vs Scalar & 29.88 & 2 & <.001 & {\cellcolor[HTML]{F08080}{Rejected}} \\ 
-T2 & Configural vs Metric & 1.03 & 2 & 0.596 & {\cellcolor[HTML]{90EE90}{Supported}} \\ 
-T2 & Metric vs Scalar & 19.11 & 2 & <.001 & {\cellcolor[HTML]{F08080}{Rejected}} \\ 
-\bottomrule
-\end{tabular*}
-\begin{minipage}{\linewidth}
-\vspace{.05em}
-\textsuperscript{\textit{1}} Non-significant p-value supports invariance (constraints do not significantly worsen fit).\\
-\end{minipage}
-
-\end{table}
-
-\newpage
 
 \section{References}\label{references}
 
@@ -1321,6 +1236,68 @@ overlaid. EF scores are z-scored within task (pooled).}
 }
 
 \end{figure}%
+
+\section{Boxplot: Distribution of EF scores across
+waves}\label{apx-fig-ef-boxplots-by-wave}
+
+\begin{figure}
+
+\caption{\label{fig-ef-boxplots-by-wave}Executive function scores across
+waves in Australia and South Africa. Boxplots show the distribution of
+harmonised task scores at each wave, stratified by country.}
+
+\centering{
+
+\pandocbounded{\includegraphics[keepaspectratio]{EF_network_analysis_files/figure-pdf/fig-ef-boxplots-by-wave-1.png}}
+
+}
+
+\end{figure}%
+
+\section{RQ3 results reported on the Fisher z
+scale}\label{apx-tbl-rq3-gt-edges-dual}
+
+\begin{table}
+
+{\caption{{Between-cohort differences (edges only) at matched waves (AU
+− SA at T1/T2) and difference-in-differences for change from T1 to T2
+(ΔAU − ΔSA). Columns show posterior median {[}95\% CrI{]} on the raw
+partial-correlation scale (Δr) and Fisher-z scale (Δz = atanh(r)). ROPE
+probabilities are computed on Δr:
+\(P(|\Delta r| > 0.10)\).}{\label{tbl-rq3-gt-edges-dual}}}
+\vspace{-20pt}}
+
+\caption*{
+{\fontsize{1}{1}\selectfont  \textbackslash{}vspace\{10pt\}\fontsize{8}{10}\selectfont }
+} 
+\fontsize{8.0pt}{10.0pt}\selectfont
+\begin{tabular*}{\linewidth}{@{\extracolsep{\fill}}l|cccl}
+\toprule
+ & \multicolumn{2}{c}{Δr (raw partial correlation)} & \multicolumn{1}{c}{Δz (Fisher atanh scale)} &  \\ 
+\cmidrule(lr){2-3} \cmidrule(lr){4-4}
+Edge & Median [95\% CrI] & P(|Δr|>0.1) & Median [95\% CrI] & analysis \\ 
+\midrule\addlinespace[2.5pt]
+\multicolumn{5}{l}{Cohort difference (AU − SA) at T1} \\[2.5pt] 
+\midrule\addlinespace[2.5pt]
+ef\_cogflex - ef\_inhibition & -0.15 [-0.33, 0.03] & 0.72 & -0.16 [-0.34, 0.03] & Main analysis \\ 
+ef\_cogflex - ef\_workingmem & 0.13 [-0.06, 0.31] & 0.62 & 0.13 [-0.06, 0.32] & Main analysis \\ 
+ef\_inhibition - ef\_workingmem & 0.11 [-0.08, 0.29] & 0.55 & 0.11 [-0.08, 0.31] & Main analysis \\ 
+\midrule\addlinespace[2.5pt]
+\multicolumn{5}{l}{Cohort difference (AU − SA) at T2} \\[2.5pt] 
+\midrule\addlinespace[2.5pt]
+ef\_cogflex - ef\_inhibition & 0.04 [-0.15, 0.23] & 0.36 & 0.04 [-0.16, 0.24] & Main analysis \\ 
+ef\_cogflex - ef\_workingmem & 0.08 [-0.11, 0.27] & 0.44 & 0.08 [-0.12, 0.28] & Main analysis \\ 
+ef\_inhibition - ef\_workingmem & 0.13 [-0.06, 0.32] & 0.63 & 0.14 [-0.06, 0.34] & Main analysis \\ 
+\midrule\addlinespace[2.5pt]
+\multicolumn{5}{l}{Difference-in-differences (ΔAU − ΔSA)} \\[2.5pt] 
+\midrule\addlinespace[2.5pt]
+ef\_cogflex - ef\_inhibition & 0.20 [-0.08, 0.47] & 0.78 & 0.20 [-0.08, 0.48] & Main analysis \\ 
+ef\_cogflex - ef\_workingmem & -0.05 [-0.31, 0.22] & 0.49 & -0.05 [-0.33, 0.22] & Main analysis \\ 
+ef\_inhibition - ef\_workingmem & 0.03 [-0.24, 0.29] & 0.47 & 0.03 [-0.25, 0.31] & Main analysis \\ 
+\bottomrule
+\end{tabular*}
+
+\end{table}
 
 
 
